navbar/header sendo feita sem css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bistec</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <!-- cabeçalho -->
+
+    <header>
+        <div class="header-bistec">
+            <a href="#" class="logo-bistec"><img src="assets/images/logo-bistec.png" alt=""></a>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PORTFÓLIO</a></li>
+                <li><a href="#">CONTATO</a></li>
+                <li class="button-green"><a href="#"><img src="assets/images/shopping-cart.png" alt=""></a></li>
+                <li class="button-loja"><a href="#">LOJA</a></li>
+                <li class="button-suporte"><a href="#">SUPORTE</a></li>
+            </ul>
+        </div>
+    </header>
+    <section>
+        <div class="banner-bistec">
+            <img src="" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
