comentário adicionado teste

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             </ul>
         </div>
     </header>
+
+    <!-- banner -->
+
     <section>
         <div class="banner-bistec">
             <img src="" alt="">
