--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 
     <section>
         <div class="banner-bistec">
-            <img src="" alt="">
+            <img src="assets/images/bg-bondinho.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
+            <div class="banner-bistec-texto">
+                <h3>Bistec Portugal</h3>
+                <p>Serviços em tecnologia para todas as empresas</p>
+            </div>
         </div>
     </section>
 
