--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bistec</title>
+    <title>Início - Bistec Portugal</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,12 +14,23 @@
         <div class="header-bistec">
             <a href="#" class="logo-bistec"><img src="assets/images/logo-bistec.png" alt=""></a>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PORTFÓLIO</a></li>
-                <li><a href="#">CONTATO</a></li>
-                <li class="button-green"><a href="#"><img src="assets/images/shopping-cart.png" alt=""></a></li>
-                <li class="button-loja"><a href="#">LOJA</a></li>
-                <li class="button-suporte"><a href="#">SUPORTE</a></li>
+                <li><button type="button" class=" normal">HOME</button></li>
+                <li><button type="button" class=" normal">PORTFÓLIO</button></li>
+                <li><button type="button" class=" normal">CONTATO</button></li>
+                <li>
+                    <a href="https://www.cupomfiscaleletronico.com.br/">
+                        <button type="button" class="button" >
+                            <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
+                            <span class="button_text">LOJA</span>
+                        </button>
+                    </a>
+                </li>
+                <li>
+                    <button type="button" class="button_support">
+                        <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
+                        <span class="button_text">SUPORTE</span>
+                    </button>
+                </li>
             </ul>
         </div>
     </header>
@@ -28,9 +39,14 @@
 
     <section>
         <div class="banner-bistec">
-            <img src="" alt="">
+            <img src="assets/images/bg-bondinho.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
+            <div class="banner-bistec-texto">
+                <h3>Bistec Portugal</h3>
+                <p>Serviços em tecnologia para todas as empresas</p>
+            </div>
         </div>
     </section>
 
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
 </body>
 </html>
