Cria corpo com produtos, remove erros de class na nav e css com parametros sem uso

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="header-bistec">
             <a href="#" class="logo-bistec"><img src="assets/images/logo-bistec.png" alt=""></a>
             <ul>
-                <li><button type="button" class=" normal">HOME</button></li>
-                <li><button type="button" class=" normal">PORTFÓLIO</button></li>
-                <li><button type="button" class=" normal">CONTATO</button></li>
+                <li><button type="button" class="normal">HOME</button></li>
+                <li><button type="button" class="normal">PORTFÓLIO</button></li>
+                <li><button type="button" class="normal">CONTATO</button></li>
                 <li>
                     <a href="https://www.cupomfiscaleletronico.com.br/">
                         <button type="button" class="button" >
@@ -35,17 +35,75 @@
         </div>
     </header>
 
-    <!-- banner -->
-
-    <section>
-        <div class="banner-bistec">
+    <!-- CORPO -->
+    <article>
+        <!-- banner -->
+        <section class="banner-bistec">
             <img src="assets/images/bg-bondinho.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
             <div class="banner-bistec-texto">
                 <h3>Bistec Portugal</h3>
                 <p>Serviços em tecnologia para todas as empresas</p>
             </div>
-        </div>
-    </section>
+        </section>
+
+
+        <!-- PRODUTOS -->
+        <section class="bistec-produtos">
+                <img src="assets/images/img-lg-bistec-automação.png" alt="">
+                    <h4 class="texto-automacao">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-bistec-cloud.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-bistec-edu.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-GPDR.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-bistec-outsourcing.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-bistec-renting.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-bistec-soft.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+
+        <section class="bistec-produtos">
+            <img src="assets/images/img-lg-bistec-msp.png" alt="">
+                <h4 class="texto-automacao">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                </h4>
+        </section>
+    </article>
 
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
 </body>
