--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@
         </section>
     </article>
 
+
+    <footer>
+        <div class="redes-sociais">
+            <ion-icon name="mail"></ion-icon>
+            <ion-icon name="logo-facebook" id="ionface"></ion-icon>
+            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon name="logo-youtube"></ion-icon>
+            <ion-icon name="logo-twitter"></ion-icon>
+            <ion-icon name="logo-flickr"></ion-icon>
+            <ion-icon name="logo-soundcloud"></ion-icon>
+            <ion-icon name="compass"></ion-icon>
+        </div>
+    </footer>
+
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
 </body>
 </html>
