--- a/index.html
+++ b/index.html
@@ -108,17 +108,24 @@
 
     <footer>
         <div class="redes-sociais">
-            <ion-icon name="mail"></ion-icon>
-            <ion-icon name="logo-facebook" id="ionface"></ion-icon>
+            <ion-icon name="mail" class="ionspecial" onclick="link()"></ion-icon>
+            <ion-icon name="logo-facebook"></ion-icon>
             <ion-icon name="logo-instagram"></ion-icon>
             <ion-icon name="logo-youtube"></ion-icon>
             <ion-icon name="logo-twitter"></ion-icon>
             <ion-icon name="logo-flickr"></ion-icon>
             <ion-icon name="logo-soundcloud"></ion-icon>
-            <ion-icon name="compass"></ion-icon>
+            <ion-icon name="compass" class="ionspecial"></ion-icon>
         </div>
     </footer>
 
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
+    <script>
+        function link(){
+            // window.location.assign("https://www.google.com");
+            window.location = "https://www.google.com"
+            target = "_blank";
+        }
+    </script>
 </body>
 </html>
