--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <!-- cabeçalho -->
 
-    <header class="header-bistec">
-            <a href="#" class="logo-bistec"><img src="assets/images/logo-bistec.png" alt=""></a>
+    <header class="header-bistec" id="first_section">
+            <a href="#first_section" class="logo-bistec"><img src="assets/images/logo-bistec.png" alt="Logo - Bistec"></a>
             <ul class="normal-menu">
-                <li><a href="#" class=" normal">HOME</a></li>
+                <li><a href="#first_section" class=" normal">HOME</a></li>
                 <li>
-                    <a href="#" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                    <a href="#home_section" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
                         <li><a href="#">BISTEC AUTOMAÇÃO</a></li>
                         <li><a href="#">BISTEC CLOUD</a></li>
@@ -27,7 +27,7 @@
                         <li><a href="#">BISTEC MSP</a></li>
                     </ul> 
                 </li>
-                <li><a href="#" class=" normal">CONTATO</a></li>
+                <li><a href="#contacts_section" class=" normal">CONTATO</a></li>
             </ul>
             <ul>
                 <li>
@@ -55,64 +55,64 @@
         <section class="banner-bistec">
             <img src="assets/images/bg-bondinho.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
             <div class="banner-bistec-texto">
-                <h3>Bistec Portugal</h3>
+                <h1>Bistec Portugal</h1>
                 <p>Serviços em tecnologia para todas as empresas</p>
             </div>
         </section>
 
 
         <!-- PRODUTOS -->
-        <section class="bistec-produtos">
-                <img src="assets/images/img-lg-bistec-automação.png" alt="">
+        <section class="bistec-produtos" id="home_section">
+                <img src="assets/images/img-lg-bistec-automação.png" alt="Bistec Automação">
                     <h4 class="texto-automacao">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                     </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-bistec-cloud.png" alt="">
+            <img src="assets/images/img-lg-bistec-cloud.png" alt="Bistec Cloud">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-bistec-edu.png" alt="">
+            <img src="assets/images/img-lg-bistec-edu.png" alt="Bistec Edu">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-GPDR.png" alt="">
+            <img src="assets/images/img-lg-GPDR.png" alt="Bistec GDPR">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-bistec-outsourcing.png" alt="">
+            <img src="assets/images/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-bistec-renting.png" alt="">
+            <img src="assets/images/img-lg-bistec-renting.png" alt="Bistec Renting">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-bistec-soft.png" alt="">
+            <img src="assets/images/img-lg-bistec-soft.png" alt="Bistec Soft">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
         <section class="bistec-produtos">
-            <img src="assets/images/img-lg-bistec-msp.png" alt="">
+            <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
                 <h4 class="texto-automacao">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
@@ -123,7 +123,7 @@
 
     <footer>
         <div class="redes-sociais">
-            <ion-icon name="mail" class="ionspecial" onclick="link()"></ion-icon>
+            <ion-icon name="mail" class="ionspecial" onclick="link()" onkeypress="console()"></ion-icon>
             <ion-icon name="logo-facebook"></ion-icon>
             <ion-icon name="logo-instagram"></ion-icon>
             <ion-icon name="logo-youtube"></ion-icon>
@@ -134,25 +134,27 @@
             <ion-icon name="location" class="ionspecial"></ion-icon>
         </div>
 
-        <div class="contact item1">
-            <a href="#"><img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal </a> 
-            <a href="#">+351 308 807 114</a>
-        </div>
-
-        <div class="contact item2">
-            <a href="#"><img src="assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a> 
-            <a href="#">+55 (13) 99210-1945</a>
-        </div>
-
-        <div class="contact item3">
-            <a href="#"><img src="assets/images/brazil.png" alt="Brasil País"> Bistec Brasil </a> 
-            <a href="#">+55 (13) 3235-7735</a> 
-            <a href="#">+55 (13) 3522-8184</a>
-        </div>
-        <div class="contact item4">
-            <a href="#"><img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento </a>
-            <a href="#">de Segunda à Sexta:</a>
-            <a href="#">08:15h - 18:00h</a>
+        <div class="contacts">
+            <div class="contact item1">
+                <a href="#first_section" id="contacts_section"><img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal </a>
+                <p>+351 308 807 114</p>
+            </div>
+    
+            <div class="contact item2">
+                <p><a href="https://api.whatsapp.com/send?phone=5513992101945"><img src="assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a></p>
+                <p><a href="https://api.whatsapp.com/send?phone=5513992101945">+55 (13) 99210-1945</a></p>
+            </div>
+    
+            <div class="contact item3">
+                <a href="https://bistec.com.br"><img src="assets/images/brazil.png" alt="Brasil País"> Bistec Brasil </a>  
+                <p>+55 (13) 3235-7735</p>  
+                <p href="#">+55 (13) 3522-8184</p>
+            </div>
+            <div class="contact item4">
+                <p href="#"><img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento </a> 
+                <p href="#">de Segunda à Sexta:</p> 
+                <p href="#">08:15h - 18:00h</p>
+            </div>
         </div>
     </footer>
     <div class="footer-copyright">
@@ -165,6 +167,10 @@
             // window.location.assign("https://www.google.com");
             window.location = "https://www.google.com"
             target = "_blank";
+        }
+
+        function console(){
+            console.log("testando");
         }
     </script>
 </body>
