coloca redirecionamento interno em potifólio

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <ul class="normal-menu">
                 <li><a href="#" class=" normal">HOME</a></li>
                 <li>
-                    <a href="#" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
+                    <a href="#bistec-automaçao" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
-                        <li><a href="#">BISTEC AUTOMAÇÃO</a></li>
-                        <li><a href="#">BISTEC CLOUD</a></li>
-                        <li><a href="#">BISTEC EDU</a></li>
-                        <li><a href="#">BISTEC GDPR</a></li>
-                        <li><a href="#">BISTEC OUTSOURCING</a></li>
-                        <li><a href="#">BISTEC RENTING</a></li>
-                        <li><a href="#">BISTEC SOFT</a></li>
-                        <li><a href="#">BISTEC MSP</a></li>
+                        <li><a href="#bistec-automaçao">BISTEC AUTOMAÇÃO</a></li>
+                        <li><a href="#bistec-cloud">BISTEC CLOUD</a></li>
+                        <li><a href="#bistec-edu">BISTEC EDU</a></li>
+                        <li><a href="#bistec-gpdr">BISTEC GDPR</a></li>
+                        <li><a href="#bistec-outsourcing">BISTEC OUTSOURCING</a></li>
+                        <li><a href="#bistec-renting">BISTEC RENTING</a></li>
+                        <li><a href="#bistec-soft">BISTEC SOFT</a></li>
+                        <li><a href="#bistec-msp">BISTEC MSP</a></li>
                     </ul> 
                 </li>
                 <li><a href="#" class=" normal">CONTATO</a></li>
@@ -62,58 +62,58 @@
 
 
         <!-- PRODUTOS -->
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-automaçao">
                 <img src="assets/images/img-lg-bistec-automação.png" alt="">
-                    <h4 class="texto-automacao">
+                    <h4 class="texto-produtos">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                     </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-cloud">
             <img src="assets/images/img-lg-bistec-cloud.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-edu">
             <img src="assets/images/img-lg-bistec-edu.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-gpdr">
             <img src="assets/images/img-lg-GPDR.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-outsourcing">
             <img src="assets/images/img-lg-bistec-outsourcing.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-renting">
             <img src="assets/images/img-lg-bistec-renting.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-soft">
             <img src="assets/images/img-lg-bistec-soft.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
 
-        <section class="bistec-produtos">
+        <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="">
-                <h4 class="texto-automacao">
+                <h4 class="texto-produtos">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
                 </h4>
         </section>
