correção de acessibilidade nos links de rede social

--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
 
     <footer>
         <div class="redes-sociais">
-            <ion-icon name="mail" class="ionspecial" onclick="email()"></ion-icon>
-            <ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="logo-twitter" onclick="link('twitter.com/bistecweb')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="logo-flickr" onclick="link('flickr.com/bistec')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="logo-soundcloud" onclick="link('soundcloud.com/bistecweb')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="logo-linkedin" onclick="link('br.linkedin.com/company/bistec')" onmouseover="teste()" onfocus="teste()"></ion-icon>
-            <ion-icon name="location" class="ionspecial" onclick="link('google.com/maps/dir/bistec')" onmouseover="teste()" onfocus="teste()"></ion-icon>
+            <ion-icon name="mail" class="ionspecial" onclick="email()" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-facebook" onclick="link('facebook.com/bistecweb')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-instagram" onclick="link('instagram.com/bistecweb')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-youtube" onclick="link('youtube.com/bistecweb')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-twitter" onclick="link('twitter.com/bistecweb')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-flickr" onclick="link('flickr.com/bistec')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-soundcloud" onclick="link('soundcloud.com/bistecweb')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="logo-linkedin" onclick="link('br.linkedin.com/company/bistec')" onkeypress="teste()"></ion-icon>
+            <ion-icon name="location" class="ionspecial" onclick="link('google.com/maps/dir/bistec')" onkeypress="teste()"></ion-icon>
         </div>
 
         <div class="contacts">
             <div class="contact item1">
                     <a id="contacts_section">
-                        <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
+                        <img src="assets/images/portugal.png" alt="Bandeira de Portugal"> Bistec Portugal
                     </a>
                     <p>
                         <a href="tel:+351 308 807 114">+351 308 807 114</a>
