arruma erro de acecibilidade na bandeira de pt

--- a/index.html
+++ b/index.html
@@ -136,12 +136,10 @@
 
         <div class="contacts">
             <div class="contact item1">
-                    <a id="contacts_section">
-                        <img src="assets/images/portugal.png" alt="Bandeira de Portugal"> Bistec Portugal
-                    </a>
-                    <p>
-                        <a href="tel:+351 308 807 114">+351 308 807 114</a>
-                    </p>
+                <a href="#first_section" id="contacts_section">
+                    <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
+                </a>
+                <p><a href="tel:+351 308 807 114">+351 308 807 114</a></p>
             </div>
     
             <div class="contact item2">
