começa a adicionar conteudo para o produto automação

--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automaçao">
                 <img src="assets/images/img-lg-bistec-automação.png" alt="Bistec Automação">
-                    <h4 class="texto-produtos">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
-                    </h4>
+                <div class="texto-produtos">
+                    <h4>Troque a anotação pela automação</h4>
+                    <h2>Facilite a sua gestão e o consumo dos seus clientes. Automatize.</h2>
+                    <p>A Bistec, já consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.</p>
+                    <p>Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, computadores etc.</p>
+                    <p>Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.</p>
+                    <p>Agora, se você esta procurando a melhor solução para gestão da sua empresa, clique <strong><a href="https://hiper.com.br/experimente-gratis?HCode=BIS01625" target="_blank" rel="noopener noreferrer">aqui</a></strong> e Experimente grátis por 7 dias!<br/></p>
+                </div>
         </section>
 
         <section class="bistec-produtos" id="bistec-cloud">
@@ -145,7 +150,7 @@
             <div class="contact item2">
                     <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
                 <p>
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945">+55 (13) 99210-1945</a>
+                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
                 </p>
             </div>
     
